k8s/apps/base/jellyfin/rclone-music-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rclone-music
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: rclone-music
    app.kubernetes.io/component: music
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rclone-music
    app.kubernetes.io/component: music
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
