k8s/apps/base/jellyfin/rclone-music-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone-music
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/component: music
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - music-sync.internal.kentaro1043.com
      secretName: rclone-music-tls
  rules:
    - host: music-sync.internal.kentaro1043.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rclone-music
                port:
                  name: http
