k8s/apps/base/jellyfin/syncthing-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: syncthing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - syncthing.internal.kentaro1043.com
      secretName: syncthing-tls
  rules:
    - host: syncthing.internal.kentaro1043.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: syncthing
                port:
                  name: gui
